# dcc-mcp-houdini

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  install.md  justfile  llms.txt  pyproject.toml  release-please-config.json
.github/scripts/: run_houdini_docker_e2e.sh  run_houdini_e2e.py
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/adr/: 0001-isolate-long-running-houdini-jobs.md
docs/ci/: houdini-docker.md
docs/guide/: local-mcp-debug.md
examples/: houdini_123.py  houdini_bootstrap.py  start_server.py
examples/mcp/: README.md  cursor-houdini-streamable-http.json
packaging/: assemble_houdini_package.py
skills/dcc-mcp-houdini-setup/: SKILL.md
skills/dcc-mcp-houdini-setup/scripts/: setup_dcc_mcp_houdini.py
src/dcc_mcp_houdini/: __init__.py  __main__.py  __version__.py  _capability_manifest.py  _context_snapshot.py  _cook_jobs.py  _cook_worker.py  _env.py  _hip_file_state.py  _isolated_jobs.py  _project_tools.py  _qt_inspector.py  _readiness.py  _render_artifacts.py  _resources.py  _rop_jobs.py  _semantic_index.py  _skill_loader.py  _status_io.py  _version_probe.py  _windows_process.py  api.py  cli.py  host.py  server.py
src/dcc_mcp_houdini/dispatcher/: __init__.py  standalone.py
src/dcc_mcp_houdini/skills/: SKILLS_INDEX.md
src/dcc_mcp_houdini/skills/houdini-animation/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-animation/scripts/: _anim_common.py  bake_channels.py  cache_simulation.py  delete_keyframes.py  export_channels.py  get_channel_info.py  get_keyframes.py  get_timeline.py  import_channels.py  list_animated_parms.py  set_keyframe.py  set_timeline.py  validate_loop_contract.py
src/dcc_mcp_houdini/skills/houdini-automation/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-automation/scripts/: _atomic_node_chain.py  _automation_common.py  build_node_chain.py  load_hip_file.py  run_python_file.py  save_hip_file.py  set_frame_range.py
src/dcc_mcp_houdini/skills/houdini-camera-light/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-camera-light/scripts/: _camlight_common.py  create_camera.py  create_light.py  frame_view.py  get_view_state.py  list_cameras.py  update_camera.py  update_light.py
src/dcc_mcp_houdini/skills/houdini-chops/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-chops/scripts/: _chops_common.py  apply_filter.py  create_audio_driven.py  create_chop_network.py  create_motionclip.py  export_to_keyframes.py  get_channel_info.py
src/dcc_mcp_houdini/skills/houdini-constraints/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-constraints/scripts/: _constraint_common.py  create_blend_constraint.py  create_orient_constraint.py  create_parent_constraint.py  create_position_constraint.py  delete_constraint.py  list_constraints.py
src/dcc_mcp_houdini/skills/houdini-dev/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-dev/scripts/: _dev_common.py  attach_project.py  introspect_hom.py  reload_modules.py  run_entrypoint.py  run_script.py  ui_action.py  (+2 more)
src/dcc_mcp_houdini/skills/houdini-export-preset/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-geometry/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-hda/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-hda-automation/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-husk/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-import-to-scene/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-interchange/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-karma/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-kinefx/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-light-rig/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-lookdev/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-material-library/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-materials/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-mesh-ops/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-node-graph/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-nodes/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-object-ops/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-parameters/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-pipeline/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-render/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-scene/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-scene-edit/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-scripting/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-texture-bake/: SKILL.md  tools.yaml
src/dcc_mcp_houdini/skills/houdini-usd-lops/: SKILL.md  tools.yaml
tests/: conftest.py  skill_loader.py  test_animation_loop_validator.py  test_animation_skills.py  test_atomic_node_chain.py  test_basic.py  test_capability_manifest.py  test_chops_skills.py  test_chunked_rop_render.py  test_constraints_skills.py  test_context_snapshot.py  test_dev_skills.py  test_geometry_mesh_skills.py  test_hda_automation_skills.py  test_hda_contract_tools.py  test_hda_lifecycle.py  test_headless_server.py  test_host.py  test_husk_render.py  test_interchange_skills.py  test_karma_stage_validator.py  test_kinefx_skills.py  test_lint_skills.py  test_lookdev_skills.py  test_materialx_pbr_skill.py  test_packaging.py  test_parameter_graph_skills.py  test_pipeline_skills.py  test_project_tools.py  test_qt_inspector.py  test_recall_metadata.py  test_release_workflow.py  test_render_artifact_transactions.py  test_render_camera_light_skills.py  test_resilient_cook_jobs.py  test_resources.py  test_rop_chunked.py  test_scene_transform_skills.py  test_semantic_index.py  test_server.py  (+6 more)
tools/: check_py37_syntax.py  houdini-dev-build-link-core-win.ps1  houdini-link-win.ps1  houdini-link.sh  houdini-start-win.ps1  houdini-start.sh  houdini-status-win.ps1  houdini-status.sh  houdini-unlink-win.ps1  houdini-unlink.sh  install_dcc_mcp_cli.py  lint_skills.py
(+186 files in other folders)
