[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-houdini"
version = "0.1.0"
description = "SideFX Houdini adapter for the DCC Model Context Protocol (MCP) ecosystem — exposes Houdini tools via MCP"
authors = [{ name = "Long Hao", email = "hal.long@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["houdini", "sidefx", "mcp", "dcc", "ai", "llm", "model-context-protocol", "hython"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "dcc-mcp-core>=0.17.2,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
    "pyfakefs>=5.3",
    "ruff>=0.8.0",
    "hatchling",
    "build",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/loonghao/dcc-mcp-houdini"
Repository = "https://github.com/loonghao/dcc-mcp-houdini"
"Bug Tracker" = "https://github.com/loonghao/dcc-mcp-houdini/issues"

[project.scripts]
dcc-mcp-houdini = "dcc_mcp_houdini.cli:main"

[project.entry-points."dcc_mcp.adapters"]
houdini = "dcc_mcp_houdini:HoudiniMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_houdini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "C4", "PLC"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # Use X | Y for type annotations — requires Python 3.10+
    "UP006",  # Use type instead of Type — requires Python 3.9+
    "B008",   # Do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
