[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-houdini"
version = "0.3.0"
description = "SideFX Houdini adapter for the DCC Model Context Protocol (MCP) ecosystem — exposes Houdini tools via MCP"
authors = [{ name = "Long Hao", email = "hal.long@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["houdini", "sidefx", "mcp", "dcc", "ai", "llm", "model-context-protocol", "hython"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    # 0.18.2+: Release Train anchor — import-light public facade,
    # DccServerOptions composition root, HostExecutionBridge, and
    # adapter-ready diagnostics/readiness surfaces.
    "dcc-mcp-core>=0.18.7,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
    "pyfakefs>=5.3",
    "requests>=2.28.0",
    "ruff>=0.8.0",
    "hatchling",
    "build",
    "twine",
    "packaging>=23.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/loonghao/dcc-mcp-houdini"
Repository = "https://github.com/loonghao/dcc-mcp-houdini"
Issues = "https://github.com/loonghao/dcc-mcp-houdini/issues"
Changelog = "https://github.com/loonghao/dcc-mcp-houdini/releases"

[project.scripts]
dcc-mcp-houdini = "dcc_mcp_houdini.cli:main"

[project.entry-points."dcc_mcp.adapters"]
houdini = "dcc_mcp_houdini:HoudiniMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_houdini"]
artifacts = [
    "src/dcc_mcp_houdini/skills/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/dcc_mcp_houdini",
    "tests",
    "tools",
    "packaging",
    "examples",
    "docs",
    "README.md",
    "AGENTS.md",
    "llms.txt",
    "justfile",
    "release-please-config.json",
    ".release-please-manifest.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not e2e and not packaging and not integration'"
markers = [
    "e2e: end-to-end tests that require a real Houdini/hython runtime",
    "packaging: tests for release package assembly",
    "integration: tests that require a running Houdini MCP instance",
]

[tool.coverage.run]
source = ["dcc_mcp_houdini"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
# Rule families kept deliberately py37-safe. Broader families such as `UP`
# (pyupgrade) are intentionally excluded: with target-version = py37 they force
# runtime-unsafe PEP 585/604 annotation rewrites (list[...]/X | None) and a
# repo-wide .format -> f-string churn. Skill packages get their own, stronger,
# runtime-accurate validation via dcc-mcp-cli (see tools/lint_skills.py).
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie (small, py37-safe simplifications)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # Do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["dcc_mcp_houdini"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests
"src/dcc_mcp_houdini/skills/**/scripts/*.py" = ["E402"]  # skill scripts add their local scripts dir before helper imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
